--- a/src/TR.LPlus/TR.LPlus.csproj
+++ b/src/TR.LPlus/TR.LPlus.csproj
@@ -5,6 +5,11 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>LPlus</RootNamespace>
+        <PackageId>TR.LPlus</PackageId>
+        <Version>0.0.1</Version>
+        <Product>L+</Product>
+        <Authors>Alexey Vorobev</Authors>
+        <PackageProjectUrl>https://github.com/vorobalek/trlplus</PackageProjectUrl>
     </PropertyGroup>
 
 </Project>
